--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "author": "typescord",
   "license": "MIT",
   "peerDependencies": {
-    "eslint": "^7.0.0",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint": "^7.0.0"
   },
   "devDependencies": {
     "eslint": "^7.20.0"
