--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "typescord",
   "license": "MIT",
   "peerDependencies": {
-    "eslint": "^7.0.0"
+    "eslint": ">=7.17.0"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.15.0",
