--- a/package.json
+++ b/package.json
@@ -1,36 +1,26 @@
 {
-  "name": "@typescord/eslint-config",
-  "version": "0.0.0",
-  "description": "ESLint config for Typescord packages",
-  "keywords": [
-    "eslint",
-    "eslint-config",
-    "typescord",
-    "typescript"
-  ],
-  "main": "index.js",
-  "author": "typescord",
-  "license": "MIT",
-  "peerDependencies": {
-    "eslint": ">=7.17.0"
-  },
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-sonarjs": "^0.5.0",
-    "eslint-plugin-unicorn": "^28.0.0"
-  },
-  "engines": {
-    "node": ">=10.0.0"
-  },
-  "homepage": "https://github.com/typescord/eslint-config#readme",
-  "bugs": {
-    "url": "https://github.com/typescord/eslint-config/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/typescord/eslint-config.git"
-  }
+	"name": "@typescord/beauty",
+	"private": true,
+	"workspaces": [
+		"packages/*"
+	],
+	"scripts": {
+		"lint": "eslint . --ext js && prettier . --check",
+		"lint-fix": "eslint . --ext js && prettier . --write"
+	},
+	"prettier": "./packages/prettier",
+	"license": "MIT",
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^4.15.0",
+		"@typescript-eslint/parser": "^4.15.0",
+		"eslint": "^7.20.0",
+		"eslint-config-prettier": "^7.2.0",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-prettier": "^3.3.1",
+		"eslint-plugin-simple-import-sort": "^7.0.0",
+		"eslint-plugin-sonarjs": "^0.5.0",
+		"eslint-plugin-unicorn": "27.0.0",
+		"prettier": "^2.2.1",
+		"typescript": "^4.1.5"
+	}
 }
