--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -15,10 +15,10 @@
 		"@typescript-eslint/eslint-plugin": "^4.15.0",
 		"@typescript-eslint/parser": "^4.15.0",
 		"eslint": ">=7.17.0",
-		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-simple-import-sort": "^7.0.0",
-		"eslint-plugin-sonarjs": "^0.5.0",
-		"eslint-plugin-unicorn": "^28.0.0"
+		"eslint-plugin-import": "^2.x",
+		"eslint-plugin-simple-import-sort": "^7.x",
+		"eslint-plugin-sonarjs": "^0.x",
+		"eslint-plugin-unicorn": ">=28.0.1"
 	},
 	"peerDependenciesMeta": {
 		"@typescript-eslint/eslint-plugin": {
