--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -10,10 +10,13 @@
 	"main": "index.js",
 	"author": "typescord",
 	"license": "MIT",
+	"dependencies": {
+		"@typescript-eslint/parser": "^4.15.0"
+	},
 	"peerDependencies": {
 		"@typescript-eslint/eslint-plugin": "^4.15.0",
-		"@typescript-eslint/parser": "^4.15.0",
 		"eslint": ">=7.17.0",
+		"eslint-import-resolver-node": "^0.3.4",
 		"eslint-plugin-import": "^2.x",
 		"eslint-plugin-sonarjs": "^0.x",
 		"eslint-plugin-unicorn": ">=28.0.1"
@@ -24,6 +27,9 @@
 		},
 		"eslint": {
 			"optional": false
+		},
+		"eslint-import-resolver-node": {
+			"optional": true
 		},
 		"eslint-plugin-import": {
 			"optional": false
