chore: update project

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,13 @@
+
 name: Continuous Integration
-on: [push, pull_request]
+on:
+  push:
+    branches: [main]
+    paths-ignore: ['*.{md,txt}', LICENSE, .*config, .vscode]
+    tags-ignore: ['*']
+  pull_request:
+    branches: ['*']
+    paths-ignore: ['*.{md,txt}', LICENSE, .*config, .vscode]
 
 jobs:
   main:
