--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"packages/*"
 	],
 	"scripts": {
-		"lint": "eslint . --ext ts",
+		"lint": "eslint . --ext js",
 		"lint-fix": "yarn lint --fix",
 		"format": "prettier . --write",
 		"mrm": "mrm --preset @typescord/mrm-preset"
