--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-
 name: Continuous Integration
 on:
   push:
@@ -14,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [10.17.x, 12, 15]
+        node-version: [10.17.x, 12, 15, 16]
 
     steps:
       - uses: actions/checkout@v2
