--- a/.github/workflows/prettier-config-release-please.yml
+++ b/.github/workflows/prettier-config-release-please.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   release-please:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: GoogleCloudPlatform/release-please-action@v2
         id: release
@@ -23,10 +23,10 @@ jobs:
       - uses: actions/checkout@v2
         if: ${{ steps.release.outputs.release_created }}
 
-      - name: Use Node.js v15.0.0
+      - name: Use Node.js v15
         uses: actions/setup-node@v2
         with:
-          node-version: 15.0.0
+          node-version: 15
           registry-url: https://registry.npmjs.org
         if: ${{ steps.release.outputs.release_created }}
 
