--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -19,7 +19,7 @@
 		}
 	},
 	"engines": {
-		"node": ">=10.13.0"
+		"node": ">=10.13.0 <17"
 	},
 	"homepage": "https://github.com/typescord/beauty/tree/main/packages/prettier-eslint#readme",
 	"bugs": {
