--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
 	"prettier": "./packages/prettier-config",
 	"license": "MIT",
 	"devDependencies": {
-		"@typescord/mrm-preset": "^2.1.0",
-		"@typescript-eslint/eslint-plugin": "^4.22.0",
-		"@typescript-eslint/parser": "^4.22.0",
-		"eslint": "^7.24.0",
-		"eslint-config-prettier": "^8.2.0",
-		"eslint-plugin-import": "^2.22.1",
+		"@typescord/mrm-preset": "^2.1.2",
+		"@typescript-eslint/eslint-plugin": "^4.26.1",
+		"@typescript-eslint/parser": "^4.26.1",
+		"eslint": "^7.28.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-import": "^2.23.4",
 		"eslint-plugin-prettier": "^3.4.0",
-		"eslint-plugin-sonarjs": "^0.6.0",
-		"eslint-plugin-unicorn": "30.0.0",
-		"mrm": "^3.0.1",
-		"prettier": "^2.2.1",
-		"typescript": "^4.2.4"
+		"eslint-plugin-sonarjs": "^0.8.0-125",
+		"eslint-plugin-unicorn": "33.0.1",
+		"mrm": "^3.0.2",
+		"prettier": "^2.3.1",
+		"typescript": "^4.3.2"
 	}
 }
