--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [10.17.x, 12, 15, 16]
+        node-version: [12, 14, 16]
 
     steps:
       - uses: actions/checkout@v2
